<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:background="@mipmap/mmm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iturktech"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#01fc94"/>

    <ImageView
        android:id="@+id/logoo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        tools:src="@mipmap/c2"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:background="@drawable/button"
        android:layoutMode="clipBounds"
        android:textAlignment="center"
        android:popupTheme="@drawable/ylw">

    </Spinner>

    <Button
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:background="@drawable/gradd"
        android:text="@string/please_select_the_language"/>

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/user_guide"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:background="@drawable/ylw"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/read"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="3dp"
        android:textSize="12sp"
        android:text="@string/read_tnc"
        android:background="@drawable/button"
        android:onClick="showAlertD"/>

    <Button
        android:id="@+id/aac"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradd"
        android:text="@string/accept_and_continue"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"/>

</RelativeLayout>