<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@mipmap/mmm"
    >

    <EditText
        android:inputType="text"
        android:id="@+id/id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#00f9e4"
        android:hint="@string/user_s_id"
        android:textColor="#00f9e4"
        android:textColorHint="#00bd94" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:backgroundTint="#00f9e4"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#00f9e4"
        android:textColorHint="#00bd94" />

    <Button
        android:id="@+id/scan_qr"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/ccc"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/scan_id"
        android:textColor="#363636"
        android:textSize="35sp"
        android:onClick="scanResult"/>

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradd"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sign_in"
        android:textColor="#363636"
        android:textSize="25sp"
        android:onClick="scanResult"/>

</RelativeLayout>